Test Cases/DISNEY/NEGATIVE_TEST/D5_CX.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>D5_CX</name>
   <tag></tag>
   <comment></comment>
   <recordOption>OTHER</recordOption>
   <testCaseGuid>bdcdad43-fdbe-4923-8a8c-aff5109b143c</testCaseGuid>
</TestCaseEntity>
